--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a Information Management Engineer.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Hong Kong.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Gaming</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>The US President.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Perth Australia</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Because I am spiderman.</p>
     </section>
 
     <footer id="footer">
